test/expected/explain_p_typedef_ri.out
explain RI *p
           ^
12: error: pointer to reference is illegal
